<resources>
    <string name="app_name">Ôn Thi THPT - ĐH</string>
    <string name="dethi">Ôn Tập Đề Thi</string>
    <string name="hello_world">Hello world!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Main content-->
    <string name="setting">Cài Đặt</string>
    <string name="onthi_document">TNTHPT_Document</string>

    <!--Left menu-->
    <string name="hdsd">Hướng dẫn sử dụng</string>
    <string name="lichsu_left">Lịch sử</string>
    <string name="action_settings">Cài đặt</string>
    
    <!--Header-->    
    <string name="thongtincanhan">Thông tin cá nhân</string>
    <string name="dangxuat">Đăng xuất</string>

    <!--Sync data-->
    <string name="title_download_data">Syncing data...</string>
    <string name="msg_can_not_connect_to_network">Network is not available.</string>
    <string name="msg_download_data">All data has now been downloaded</string>
    <string name="msg_data_has_been_saved">Data has been saved.</string>

    <string name="img_setting_drawer">image setting drawer</string>
    <string name="img_log">img logo</string>
    <string name="img_back">img back</string>
    <string name="img_button_menu">img button menu</string>

    <!--List Môn Học-->
    <string-array name="array_setting">
        <item>Trang Chủ</item>
        <item>Toán</item>
        <item>Ngữ Văn</item>
        <item>Anh Văn</item>
        <item>Sinh Học</item>
        <item>Vật Lý</item>
        <item>Hóa Học</item>
        <item>Lịch Sử</item>
        <item>Địa Lý</item>
        <item>Thoát</item>
    </string-array>

    <string name="title_setting_trangchu">Trang Chủ</string>
    <string name="title_setting_toan">Toán</string>
    <string name="title_setting_nguvan">Ngữ Văn</string>
    <string name="title_setting_anhvan">Anh Văn</string>
    <string name="title_setting_sinhoc">Sinh Học</string>
    <string name="title_setting_vatly">Vật Lý</string>
    <string name="title_setting_hoahoc">Hóa Học</string>
    <string name="title_setting_lichsu">Lịch Sử</string>
    <string name="title_setting_dialy">Địa Lý</string>
    <string name="title_setting_thoat">Thoát</string>

    <string name="title_back">BACK</string>
    <string name="msg_time_out">Sorry you are not connected to the internet.</string>

    <string name="left_trangchu">Trang Chủ</string>
    <string name="left_montoan">Toán Học</string>
    <string name="left_monnguvan">Ngữ Văn</string>
    <string name="left_monanhvan">Anh Văn</string>
    <string name="left_monvatly">Vật Lý</string>
    <string name="left_monhoahoc">Hóa Học</string>
    <string name="left_monsinhhoc">Sinh Học</string>
    <string name="left_monlichsu">Lịch Sử</string>
    <string name="left_mondialy">Địa Lý</string>
    <string name="left_yeuthich">Yêu Thích</string>
    <string name="left_dethi">Đề Thi</string>
    <string name="left_taidulieu">Tải dữ liệu</string>
    <string name="left_thoat">Thoát</string>

    <!-- Infomation of test exam-->
    <string name="title_soluong_cauhoi">Số lượng câu hỏi: </string>
    <string name="title_thoigian_cauhoi">Thời gian làm bài: </string>
    <string name="start">Bắt đầu</string>
    <string name="thongtin_dethi">THÔNG TIN ĐỀ THI</string>
    <string name="time_180">180 phút</string>
    <string name="time_90">90 phút</string>
    <string name="hinh_thuc_thi">Hình thức thi: </string>
    <string name="thi_tracnghiem">Trắc nghiệm</string>
    <string name="thi_tu_luan">Tự Luận</string>
    <string name="title_cau">Câu</string>
    <string name="dap_an_a">A</string>
    <string name="dap_an_b">B</string>
    <string name="dap_an_c">C</string>
    <string name="dap_an_d">D</string>
    <string name="btn_back">BACK</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_resume">RESUME</string>
    <string name="btn_check">CHECK</string>
    <string name="btn_close">CLOSE</string>
    <string name="btn_view_pdf">XEM PDF</string>
    <string name="msg_not_select_dapan">Bạn phải chọn câu trả lời</string>

    <!--show dialog-->
    <string name="dialog_info">KẾT QUẢ BÀI LÀM</string>
    <string name="dialog_sodiem">Số điểm: </string>
    <string name="dialog_socaudung">Số câu đúng: </string>
    <string name="dialog_thoigian">Thời gian: </string>
    <string name="dialog_close">ĐÓNG</string>

    <!--dialog exit app-->
    <string name="close_app">Bạn có muốn thoát ứng dụng ?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
</resources>
