<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_trangchu"
            android:icon="@drawable/home"
            android:title="@string/left_trangchu" />

        <item
            android:id="@+id/item_navigation_drawer_montoan"
            android:icon="@drawable/quyche"
            android:title="@string/left_montoan"/>

        <item
            android:id="@+id/item_navigation_drawer_monnguvan"
            android:icon="@drawable/hdsd"
            android:title="@string/left_monnguvan"/>

        <item
            android:id="@+id/item_navigation_drawer_monanhvan"
            android:icon="@drawable/ilichsu"
            android:title="@string/left_monanhvan" />

        <item
            android:id="@+id/item_navigation_drawer_monvatly"
            android:icon="@drawable/about"
            android:title="@string/left_monvatly" />

        <item
            android:id="@+id/item_navigation_drawer_monhoahoc"
            android:icon="@drawable/gopy"
            android:title="@string/left_monhoahoc" />

        <item
            android:id="@+id/item_navigation_drawer_monsinhoc"
            android:icon="@drawable/gopy"
            android:title="@string/left_monsinhhoc" />

        <item
            android:id="@+id/item_navigation_drawer_monlichsu"
            android:icon="@drawable/star"
            android:title="@string/left_monlichsu" />

        <item
            android:id="@+id/item_navigation_drawer_mondialy"
            android:icon="@drawable/setting"
            android:title="@string/left_mondialy" />

        <item
            android:id="@+id/item_navigation_drawer_dethi"
            android:icon="@drawable/setting"
            android:title="@string/left_dethi" />

        <item
            android:id="@+id/item_navigation_drawer_yeuthich"
            android:icon="@drawable/yeuthich"
            android:title="@string/left_yeuthich" />

        <item
            android:id="@+id/item_navigation_drawer_thoat"
            android:icon="@drawable/thoat"
            android:title="Thoát" />
    </group>
</menu>