<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_light_50"
    android:paddingTop="@dimen/layout_padding_65">
    <LinearLayout
        android:id="@+id/linear_cauhoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title_cauhoi"
            android:layout_width="@dimen/layout_padding_40"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_20"
            android:text="@string/title_cau"
            android:textColor="@color/md_blue_700"/>

        <TextView
            android:id="@+id/txt_sothutu_cauhoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_20"
            android:textColor="@color/md_blue_700" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_noidung_cauhoi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size_20"/>

    <RadioGroup
        android:id="@+id/group_rad_dapan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/layout_padding_5">
        <RadioButton
            android:id="@+id/rad_dapan_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dap_an_a"/>

        <RadioButton
            android:id="@+id/rad_dapan_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dap_an_b"/>

        <RadioButton
            android:id="@+id/rad_dapan_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dap_an_c"/>

        <RadioButton
            android:id="@+id/rad_dapan_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dap_an_d"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linear_show_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_500"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            android:text="@string/btn_back"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_700"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            android:paddingLeft="@dimen/layout_padding_10"
            android:text="@string/btn_next"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="wrap_content"
            android:background="@color/md_blue_700"
            android:paddingLeft="@dimen/layout_padding_5"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            android:text="@string/btn_check"/>
    </LinearLayout>
</LinearLayout>