<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/md_blue_light_50"
    android:paddingTop="@dimen/layout_padding_65">

    <TextView
        android:id="@+id/txt_title_info_dethi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size_20"
        android:paddingBottom="@dimen/layout_padding_15"
        android:textColor="@color/md_red"/>

    <TextView
        android:id="@+id/txt_ten_dethi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:textSize="@dimen/title_size_20"/>

    <LinearLayout
        android:id="@+id/linear_soluong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title_soluong_dethi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"/>

        <TextView
            android:id="@+id/txt_soluong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_thoigian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title_time_dethi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"/>

        <TextView
            android:id="@+id/txt_thoigian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_hinhthuc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_padding_15"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title_hinhthuc_dethi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:paddingRight="@dimen/layout_padding_10"/>

        <TextView
            android:id="@+id/txt_loai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size_16"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start_dethi"
        android:layout_width="@dimen/layout_padding_100"
        android:layout_height="@dimen/layout_padding_50"
        android:background="@color/md_blue_700"
        android:textColor="@color/bg_white"
        android:textStyle="bold"
        android:text="@string/start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding_10"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_view_pdf_dethi"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="@dimen/layout_padding_50"
            android:layout_marginTop="@dimen/layout_padding_10"
            android:layout_marginRight="@dimen/layout_padding_10"
            android:background="@color/md_blue_700"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            android:text="@string/btn_view_pdf"/>

        <Button
            android:id="@+id/btn_close_info_dethi"
            android:layout_width="@dimen/layout_padding_100"
            android:layout_height="@dimen/layout_padding_50"
            android:layout_marginTop="@dimen/layout_padding_10"
            android:background="@color/md_blue_700"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            android:text="@string/btn_close"/>
    </LinearLayout>
</LinearLayout>